fixing mobile hover spacing on portfolio

--- a/_sass/_portfolio.scss
+++ b/_sass/_portfolio.scss
@@ -142,7 +142,8 @@
 .btn-isotop {
     background: none;
     border: 0;
-    padding: 15px 20px 15px;
+    margin-top:9px;
+    padding: 6px 20px 15px;
     color: #000;
     vertical-align: middle;
     -webkit-transform: translateZ(0);
